# Project_1

./: README.md
Code/: .ninja_deps  CMakeCache.txt  CMakeLists.txt  Dương Lĩnh 123 - NganHang.txt  Dương Tấn Lĩnh - NganHang.txt  Dương Tấn Vinh - NganHang.txt  Thongkedoanhthu.cpp  Thongkedoanhthu.h  YKien.txt  build.ninja  cmake_install.cmake  danhsachtramthuphi.cpp  danhsachtramthuphi.h  danhthu.cpp  dki.cpp  dki.h  dki.ui  dnhap.cpp  dnhap.h  doimatkhau.cpp  doimatkhau.h  doimatkhau.ui  giaodienchinh.h  giaodiennguoidung.cpp  giaodiennguoidung.h  giaodiennguoidung.ui  giaodienthanhtoan.cpp  giaodienthanhtoan.h  giaodienthanhtoan.ui  hienthiykiien.cpp  homthu.cpp  homthu.ui  lichsugiaodich.h  lichsunguoidung.cpp  lichsunguoidung.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  nguoidung.cpp  noptien.cpp  (+11 more)
Code/.cmake/api/v1/reply/: cache-v2-78caaf265149bafccffd.json  index-2024-05-28T05-34-54-0946.json
Code/.cmake/api/v1/reply.prev/: cmakeFiles-v1-36e82ec4a8e17915c48a.json  directory-.-Debug-62279f07a50b233f6df2.json  index-2024-05-28T05-09-20-0260.json  target-Quan_Li_Thu_Phi_Quoc_Lo_1A_Nhom2_autogen_timestamp_deps-Debug-09a3d0f947bad597d684.json
Code/Quan_Li_Thu_Phi_Quoc_Lo_1A_Nhom2_autogen/: deps
Code/Quan_Li_Thu_Phi_Quoc_Lo_1A_Nhom2_autogen/EWIEGA46WW/: moc_Thongkedoanhthu.cpp  moc_Thongkedoanhthu.cpp.d  moc_caidat.cpp  moc_caidat.cpp.d  moc_danhsachtramthuphi.cpp  moc_dnhap.cpp  moc_doimatkhau.cpp.d  moc_giaodienchinh.cpp  moc_giaodiennguoidung.cpp  moc_giaodienthanhtoan.cpp  moc_hienthiykiien.cpp  moc_homthu.cpp.d  moc_lichsugiaodich.cpp  moc_lichsugiaodich.cpp.d  moc_lichsunguoidung.cpp.d  moc_mainwindow.cpp  moc_noptien.cpp  moc_quanlind.cpp  moc_quanlinguoidung.cpp.d
Code/Quan_Li_Thu_Phi_Quoc_Lo_1A_Nhom2_autogen/include/: ui_Thongkedoanhthu.h  ui_caidat.h  ui_doimatkhau.h  ui_giaodienchinh.h  ui_noptien.h
Doc/: Báo-cáo-PBL-1.docx
New/: .ninja_log  Adaptic.qss  DanhSachTramThuPhi.txt  LichSuGiaoDich.txt  TaiKhoanNguoiDung.txt  Thongkedoanhthu.ui  Võ Văn Thái - NganHang.txt  danhthu.h  dnhap.ui  giaodienchinh.cpp  giaodienchinh.ui  hienthiykiien.h  hienthiykiien.ui  homthu.h  lichsugiaodich.cpp  lichsugiaodich.ui  lichsunguoidung.h  main.cpp  nguoidung.h  phanhoi.cpp  phanhoi.ui  quanlilichsu.ui  taikhoannganhang.h  thai22 - NganHang.txt  vanthai - NganHang.txt
New/.cmake/api/v1/reply/: codemodel-v2-56cdb640971a9894e5a9.json  directory-.-Debug-4d309e34400e9c976973.json  (+2 more)
New/.cmake/api/v1/reply.prev/: codemodel-v2-8e49419b48d852607409.json  target-Quan_Li_Thu_Phi_Quoc_Lo_1A_Nhom2-Debug-5200a2369228a5ca4f39.json
New/.qt/: QtDeploySupport.cmake
New/Quan_Li_Thu_Phi_Quoc_Lo_1A_Nhom2_autogen/: mocs_compilation.cpp
New/Quan_Li_Thu_Phi_Quoc_Lo_1A_Nhom2_autogen/EWIEGA46WW/: moc_danhsachtramthuphi.cpp.d  moc_dki.cpp  moc_dki.cpp.d  moc_dnhap.cpp.d  moc_doimatkhau.cpp  moc_giaodienchinh.cpp.d  moc_giaodiennguoidung.cpp.d  moc_giaodienthanhtoan.cpp.d  moc_hienthiykiien.cpp.d  moc_homthu.cpp  moc_lichsunguoidung.cpp  moc_mainwindow.cpp.d  moc_noptien.cpp.d  moc_phanhoi.cpp  moc_phanhoi.cpp.d  moc_quanlilichsu.cpp  moc_quanlilichsu.cpp.d  moc_quanlind.cpp.d  moc_quanlinguoidung.cpp
New/Quan_Li_Thu_Phi_Quoc_Lo_1A_Nhom2_autogen/include/: ui_Quanlind.h  ui_dki.h  ui_dnhap.h  ui_giaodiennguoidung.h  ui_giaodienthanhtoan.h  ui_hienthiykiien.h  ui_homthu.h  ui_lichsugiaodich.h  ui_lichsunguoidung.h  ui_mainwindow.h  ui_phanhoi.h  ui_quanlilichsu.h  ui_quanlinguoidung.h
Ref/: ThamKhao.docx  codethamkhao.cpp  ~$amKhao.docx
